@@ -915,6 +915,7 @@ position:absolute;
 }
 .rawTextQuestion {width:100%;height:100px;}
 .dragDropQuestion .droppable, .dragDropQuestion .draggable{color:white;}
+.emptySpacesField{margin-bottom:3px;}
 
 /*Random test table classes*/
 table .randomTest {text-align:left;margin:5px;}
